--- a/musasampo-frontend/src/components/form-input/form-input.styles.scss
+++ b/musasampo-frontend/src/components/form-input/form-input.styles.scss
@@ -2,30 +2,32 @@ $sub-color: grey;
 $main-color: black;
 
 @mixin shrinkLabel {
-  top: -14px;
-  font-size: 12px;
+  top: -20px;
+  font-size: 14px;
   color: $main-color;
 }
 
 .group {
   position: relative;
-  margin: 45px 0;
+  margin: 35px 0;
 
   .form-input {
     background: none;
     background-color: white;
     color: $sub-color;
     font-size: 18px;
-    padding: 10px 10px 10px 5px;
+    padding: 5px 10px 10px 5px;
     display: block;
     width: 100%;
     border: none;
-    border-radius: 0;
     border-bottom: 1px solid $sub-color;
-    margin: 25px 0;
+    border-right: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
 
     &:focus {
-      outline: none;
+      outline: 1px solid $sub-color;
+      border-bottom: 1px solid white;
+      color: black;
     }
 
     &:focus ~ .form-input-label {
@@ -39,12 +41,11 @@ $main-color: black;
 
   .form-input-label {
     color: $sub-color;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: normal;
     position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
+    left: 10px;
+    top: 5px;
     transition: 300ms ease all;
 
     &.shrink {
