--- a/musasampo-frontend/src/components/header/header.styles.scss
+++ b/musasampo-frontend/src/components/header/header.styles.scss
@@ -37,6 +37,18 @@ html {
     }
   }
 
+  .search {
+    width: 250px;
+    margin-left: -280px;
+  }
+
+  .search-button {
+    width: 60px;
+    height: 22px;
+    margin-top: 36px;
+    margin-left: -28px;
+  }
+
   .options {
     width: 50%;
     height: 100%;
