--- a/musasampo-frontend/src/components/sign-up/sign-up.styles.scss
+++ b/musasampo-frontend/src/components/sign-up/sign-up.styles.scss
@@ -1,9 +1,18 @@
 .sign-up {
+  width: 380px;
   display: flex;
   flex-direction: column;
-  width: 380px;
+  font-size: 20px;
 
   .title {
     margin: 10px 0;
+  }
+
+  .subtitle {
+    margin-bottom: 5px;
+  }
+
+  .buttons {
+    padding-top: 5px;
   }
 }
