--- a/musasampo-frontend/src/pages/homepage/homepage.styles.scss
+++ b/musasampo-frontend/src/pages/homepage/homepage.styles.scss
@@ -1,5 +1,65 @@
 .homepage {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  .introduction {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    //border : 1px solid #222831;
+    //background:  white;
+  }
+
+    .logo-area {
+      margin-right: 25px;
+    }
+
+    .infoText {
+      display: table-cell;
+      font-size: 18px;
+      font-family: 'Lucida Sans Unicode';
+      letter-spacing: -0.3px;
+      // center the text vertically:
+      margin-top: auto;
+      margin-bottom: auto;
+  }
+
+  .parts {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+
+    .part-container {
+      display: flex;
+      flex-direction: row;
+
+      .part1 {
+        background:  #393e46;
+        border : 1px solid #222831;
+        width: 700px;
+        height: 300px;
+        margin-right:25px;
+      }
+
+      .part2 {
+        background:  #393e46;
+        border : 1px solid #222831;
+        width: 700px;
+        height: 300px;
+      }
+    }
+
+    .part3 {
+      background:  #393e46;
+      border : 1px solid #222831;
+      width: auto;
+      height: 300px;
+      margin: 25px auto 25px;
+    }
+  }
 }
