--- a/musasampo-frontend/src/components/header/header.styles.scss
+++ b/musasampo-frontend/src/components/header/header.styles.scss
@@ -37,18 +37,6 @@ html {
     }
   }
 
-  .search {
-    width: 250px;
-    margin-left: -280px;
-  }
-
-  .search-button {
-    width: 60px;
-    height: 22px;
-    margin-top: 36px;
-    margin-left: -28px;
-  }
-
   .options {
     width: 50%;
     height: 100%;
@@ -61,7 +49,7 @@ html {
     .option {
       padding: 10px 12px;
       color: white;
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       cursor: pointer;
     }
   }
