--- a/musasampo-frontend/src/pages/albums/albums.styles.scss
+++ b/musasampo-frontend/src/pages/albums/albums.styles.scss
@@ -1,10 +1,11 @@
 .album-page {
   display: flex;
   flex-direction: column;
+  margin-left: 40px;
 
   .title {
     font-size: 38px;
-    margin: 0 auto 30px;
+    margin-top: 25px;
   }
 
   .items {
