commit in UI_branch_1

--- a/musasampo-frontend/src/components/album-item/album-item.styles.scss
+++ b/musasampo-frontend/src/components/album-item/album-item.styles.scss
@@ -39,6 +39,11 @@
     justify-content: space-between;
     font-size: 18px;
 
+    &:hover {
+      color: #32e0c4;
+      background:  #222831;
+    }
+
     .name {
       width: auto;
     }
