--- a/musasampo-frontend/src/pages/albums/albums.styles.scss
+++ b/musasampo-frontend/src/pages/albums/albums.styles.scss
@@ -4,8 +4,9 @@
   margin-left: 40px;
 
   .title {
-    font-size: 38px;
-    margin-top: 25px;
+    font-size: 28px;
+    margin-top: 18px;
+    margin-bottom: 26px;
   }
 
   .items {
