updated band and album pages, correct information

--- a/musasampo-frontend/src/components/album-item/album-item.styles.scss
+++ b/musasampo-frontend/src/components/album-item/album-item.styles.scss
@@ -40,8 +40,7 @@
     font-size: 18px;
 
     &:hover {
-      color: #32e0c4;
-      background:  #222831;
+      color: #6c7685;
     }
 
     .name {
