--- a/musasampo-frontend/src/components/header/header.styles.scss
+++ b/musasampo-frontend/src/components/header/header.styles.scss
@@ -17,6 +17,7 @@ html {
     width: 40%;
     font-size: 40px;
     margin-left: 5px;
+    margin-top: -2px;
     display: flex;
     align-items: center;
     font-weight: bold;
