--- a/musasampo-frontend/src/components/album/album.styles.scss
+++ b/musasampo-frontend/src/components/album/album.styles.scss
@@ -7,6 +7,8 @@
         font-size: 40px;
         display: flex;
         font-weight: bold;
+        margin-left: 0px;
+        margin-bottom: 0px;
       }
     
     .subtitle {
