header login color changed

--- a/musasampo-frontend/src/components/header/header.styles.scss
+++ b/musasampo-frontend/src/components/header/header.styles.scss
@@ -53,5 +53,11 @@ html {
       font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       cursor: pointer;
     }
+    .login {
+      padding: 10px 12px;
+      color: #32e0c4;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+      cursor: pointer;
+    }
   }
 }
