--- a/musasampo-frontend/src/components/chat-box/chat-box.styles.scss
+++ b/musasampo-frontend/src/components/chat-box/chat-box.styles.scss
@@ -1,27 +1,34 @@
-.wrapper {
-    margin-left: auto;
-    margin-right: auto;
+input[type="text"],
+select {
     width: 100%;
-    height: 100%;
-    background-color: green;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .chat {
-    border: 1px solid black;
+    width: 30%;
     float: right;
+    height: 80vh;
 
     .chat-header {
-        background-color: grey;
+        text-align: center;
+        border-radius: 15px 15px 0px 0px;
+        border: 2px solid black;
     }
     .chat-window {
         background-color: white;
-        height: 260px;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        width: 100%;
+        max-height: 100%;
+        min-height: 100%;
+        overflow-y: auto;
+        border: 2px solid black;
 
         .inner-chat-window {
             width: 100%;
-            height: auto;
             display: block;
             float: left;
         }
@@ -48,19 +55,23 @@
 
     .chat-footer {
         display: flex;
-        height: 40px;
-        background-color: red;
+        height: 50px;
+        position: sticky;
+        width: 100%;
+        border: 2px solid black;
+        padding: 2px;
 
         .input {
-            border-radius: 5px;
             flex-grow: 1;
             font-size: 18px;
+            width: 90%;
+            border: 0px;
+            background-color: transparent;
         }
         .send {
-            background-color: blue;
-            color: white;
-            border-radius: 5px;
+            color: #32e0c4;
             font-size: 16px;
+            width: 10%;
         }
     }
 }
