profile things added + other small tweaks

--- a/musasampo-frontend/src/components/album-preview/album-preview.styles.scss
+++ b/musasampo-frontend/src/components/album-preview/album-preview.styles.scss
@@ -5,7 +5,12 @@
   .title {
     font-size: 38px;
     margin-bottom: 25px;
-    margin-left: 0px;
+    margin-top: 0px;
+
+    cursor: pointer;
+        &:hover {
+            color: grey;
+        }
   }
 
   .items {
