--- a/musasampo-frontend/src/components/sign-in-button/sign-in-button.styles.scss
+++ b/musasampo-frontend/src/components/sign-in-button/sign-in-button.styles.scss
@@ -6,7 +6,7 @@
   line-height: 50px;
   padding: 0 35px 0 35px;
   font-size: 15px;
-  background-color: #0D7377;
+  background-color: #24a892;
   color: white;
   text-transform: uppercase;
   font-family: "Open Sans Condensed";
@@ -18,7 +18,7 @@
 
   &:hover {
     background-color:#32e0c4;
-    color: #0D7377;
+    color: black;
   }
 
   &.inverted {
