--- a/musasampo-frontend/src/components/album-item/album-item.styles.scss
+++ b/musasampo-frontend/src/components/album-item/album-item.styles.scss
@@ -11,14 +11,13 @@
     height: 95%;
     background-size: cover;
     background-position: center;
-    margin-bottom: 5px;
   }
 
   .custom-button {
     width: 80%;
     opacity: 0.7;
     position: absolute;
-    top: 220px;
+    top: 185px;
     display: none;
   }
 
@@ -36,11 +35,13 @@
   .album-footer {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     font-size: 18px;
+    margin-bottom: 25px;
 
     &:hover {
-      color: #6c7685;
+      color: grey;
     }
 
     .name {
