--- a/musasampo-frontend/src/pages/guitartuner-page/guitartuner-page.styles.scss
+++ b/musasampo-frontend/src/pages/guitartuner-page/guitartuner-page.styles.scss
@@ -1,4 +1,4 @@
-.album-preview {
+.tuner-page {
     display: flex;
     flex-direction: column;
     margin-bottom: 30px;
@@ -8,8 +8,10 @@
     }
 
     .title {
-        font-size: 28px;
+        font-size: 38px;
         margin-bottom: 25px;
+        margin-left: 40px;
+        margin-top: 0px;
 
         cursor: pointer;
         &:hover {
