--- a/musasampo-frontend/src/components/album-item/album-item.styles.scss
+++ b/musasampo-frontend/src/components/album-item/album-item.styles.scss
@@ -11,13 +11,14 @@
     height: 95%;
     background-size: cover;
     background-position: center;
+    margin-bottom: 5px;
   }
 
   .custom-button {
     width: 80%;
     opacity: 0.7;
     position: absolute;
-    top: 185px;
+    top: 220px;
     display: none;
   }
 
@@ -35,13 +36,12 @@
   .album-footer {
     width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     font-size: 18px;
-    margin-bottom: 25px;
 
     &:hover {
       color: grey;
+      cursor: pointer;
     }
 
     .name {
