--- a/musasampo-frontend/src/components/form-input2/form-input2.styles.scss
+++ b/musasampo-frontend/src/components/form-input2/form-input2.styles.scss
@@ -1,23 +1,18 @@
 $sub-color: grey;
 $main-color: black;
 
-@mixin shrinkLabel {
-  top: -20px;
-  font-size: 14px;
-  color: $main-color;
-}
-
-.group {
+.group2 {
   position: relative;
-  margin: 35px 0;
+  margin-bottom: 35px;
 
-  .form-input {
+  .form-input2 {
     background: none;
     background-color: white;
     color: $sub-color;
     font-size: 18px;
     border-radius: 4px;
     padding: 5px 10px 10px 5px;
+    margin-bottom: 0px;
     display: block;
     width: 100%;
     border-top: none;
@@ -31,27 +26,13 @@ $main-color: black;
       border-radius: 0px;
       color: black;
     }
-
-    &:focus ~ .form-input-label {
-      @include shrinkLabel();
-    }
   }
 
   input[type='password'] {
     letter-spacing: 0.3em;
   }
 
-  .form-input-label {
-    color: $sub-color;
-    font-size: 18px;
-    font-weight: normal;
-    position: absolute;
-    left: 10px;
-    top: 5px;
-    transition: 300ms ease all;
-
-    &.shrink {
-      @include shrinkLabel();
-    }
+  input[type='text'] {
+    margin-bottom: -15px;
   }
 }
