--- a/musasampo-frontend/src/components/band/band.styles.scss
+++ b/musasampo-frontend/src/components/band/band.styles.scss
@@ -30,6 +30,10 @@
         }
     }
 
+    .container10 {
+        display: flex;
+        flex-direction: row;
+
     .tabpanel1 {
         width: 50%;
         margin-left: 150px;
@@ -57,17 +61,16 @@
     }
 
     .bandLogo {
-        position: absolute;
-        left: 1120px;
-        top: 160px;
+        margin-left: 70px;
         width: auto;
         height: auto;
 
         .img {
-            max-width: 250px;
-            max-height: 250px;
+            max-width: 350px;
+            max-height: 350px;
         }
     }
+}
 
     .bandImage {
         position: absolute;
