--- a/musasampo-frontend/src/components/profile-new-album/profile-new-album.styles.scss
+++ b/musasampo-frontend/src/components/profile-new-album/profile-new-album.styles.scss
@@ -48,8 +48,8 @@ $main-light-color: #393e46;
         .buttons {
             display: flex;
             justify-content: space-between;
-            padding-top: 15px;
-            width: 100%
+            padding-top: 35px;
+            width: 100%;
             }
     }
 }
