--- a/musasampo-frontend/src/components/profile-new-band/profile-new-band.styles.scss
+++ b/musasampo-frontend/src/components/profile-new-band/profile-new-band.styles.scss
@@ -41,9 +41,11 @@
         margin-left: 50px;
         width: 50%;
 
-        .buttons {
-            float: right;
-            padding-top: 25px;
+        .buttons5 {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 50px;
+            width: 100%;
         }
     }
 }
