image position fixed in album page, guitar image things changed

--- a/musasampo-frontend/src/components/guitar-tuner/guitar-tuner.styles.scss
+++ b/musasampo-frontend/src/components/guitar-tuner/guitar-tuner.styles.scss
@@ -21,11 +21,12 @@
         width: 30%;
 
         .headstock {
-            width: 100%;
-            height: auto;
+            width: 70%;
+            height: 70%;
         }
 
         .caption {
+            margin-top: 20px;
             display: block;
         }
     }
