--- a/musasampo-frontend/src/components/album/album.styles.scss
+++ b/musasampo-frontend/src/components/album/album.styles.scss
@@ -1,83 +1,90 @@
-.titles {
-    margin-left: 165px;
-    margin-top: 30px;
-    margin-bottom: 15px;
+.album-page {
 
-    .title {
-        font-size: 40px;
+    .titles12 {
+        margin-left: 165px;
+        margin-top: 30px;
+        margin-bottom: 15px;
+
+        .title12 {
+            font-size: 40px;
+            display: flex;
+            font-weight: bold;
+            margin-left: 0px;
+            margin-bottom: 0px;
+        }
+        
+        .subtitle12 {
+            font-size: 30px;
+            display: flex;
+            font-weight: bold;
+            margin-left: 2px;
+        }
+    }
+
+    .description {
+        font-size: 16px;
+        margin-left: 155px;
+        font-family: 'Lucida Sans Unicode';
+        letter-spacing: -0.3px;
+
+        .descriptor {
+            height: 100%;
+            width: auto;
+            font-weight: bold;
+            display: table-cell;
+            text-align: right;
+            padding-right: 10px;
+        }
+        
+        .infotext {
+            height: 100%;
+            display: table-cell;
+            white-space: nowrap;
+            text-align: left;
+        }
+    }
+
+    .container12 {
         display: flex;
-        font-weight: bold;
-        margin-left: 0px;
-        margin-bottom: 0px;
-      }
-    
-    .subtitle {
-        font-size: 30px;
-        display: flex;
-        font-weight: bold;
-        margin-left: 2px;
-      }
-}
+        flex-direction: row;
 
-.description {
-    font-size: 16px;
-    margin-left: 155px;
-    font-family: 'Lucida Sans Unicode';
-    letter-spacing: -0.3px;
+        .tabpanel12 {
+            width: 50%;
+            margin-left: 150px;
+            margin-top: 25px;
+            margin-bottom: 20px;
 
-    .descriptor {
-        height: 100%;
-        width: auto;
-        font-weight: bold;
-        display: table-cell;
-        text-align: right;
-        padding-right: 10px;
-      }
-    
-    .infotext {
-        height: 100%;
-        display: table-cell;
-        white-space: nowrap;
-        text-align: left;
-      }
-}
+            .tabs {
+                background: #393e46;
+                /*border-top-left-radius: 8px;
+                border-top-right-radius: 8px;
+                width: 57%;*/
+            }
 
-.tabpanel1 {
-    width: 50%;
-    margin-left: 150px;
-    margin-top: 25px;
-    margin-bottom: 20px;
+            .tab-name {
+                color: white;
+            }
 
-    .tabs {
-        background: #393e46;
-        /*border-top-left-radius: 8px;
-        border-top-right-radius: 8px;
-        width: 57%;*/
-    }
+            .panel-content {
+                overflow-y: auto;
+                max-height: 370px;
+                border: 1px solid  #393e46;
+                border-top: 0px solid;
+                background: white;
+            }
+        }
 
-    .tab-name {
-        color: white;
-    }
+        .albumImage {
+            margin-left: 70px;
+            margin-top: 25px;
+            width: auto;
+            height: auto;
 
-    .panel-content {
-        overflow-y: auto;
-        max-height: 370px;
-        border: 1px solid  #393e46;
-        border-top: 0px solid;
-        background: white;
-    }
-}
-
-.albumImage {
-    border: 1px solid #393e46;
-    position: absolute;
-    left: 791px;
-    top: 160px;
-    width: 202px;
-    height: 202px;
-
-    .img {
-        width: 200px;
-        height: 200px;
+            .img2 {
+                border: 1px solid #393e46;
+                max-width: 400px;
+                max-height: 400px;
+            }
+        }
     }
 }
