--- a/musasampo-frontend/src/components/profile-new-band/profile-new-band.styles.scss
+++ b/musasampo-frontend/src/components/profile-new-band/profile-new-band.styles.scss
@@ -41,7 +41,7 @@
         margin-left: 50px;
         width: 50%;
 
-        .buttons5 {
+        .buttons {
             display: flex;
             justify-content: space-between;
             margin-top: 50px;
