--- a/musasampo-frontend/src/components/guitar-tuner/guitar-tuner.styles.scss
+++ b/musasampo-frontend/src/components/guitar-tuner/guitar-tuner.styles.scss
@@ -21,12 +21,11 @@
         width: 30%;
 
         .headstock {
-            width: 70%;
-            height: 70%;
+            width: 100%;
+            height: auto;
         }
 
         .caption {
-            margin-top: 20px;
             display: block;
         }
     }
