--- a/musasampo-frontend/src/components/album/album.styles.scss
+++ b/musasampo-frontend/src/components/album/album.styles.scss
@@ -1,90 +1,83 @@
-.album-page {
+.titles {
+    margin-left: 165px;
+    margin-top: 30px;
+    margin-bottom: 15px;
 
-    .titles12 {
-        margin-left: 165px;
-        margin-top: 30px;
-        margin-bottom: 15px;
-
-        .title12 {
-            font-size: 40px;
-            display: flex;
-            font-weight: bold;
-            margin-left: 0px;
-            margin-bottom: 0px;
-        }
-        
-        .subtitle12 {
-            font-size: 30px;
-            display: flex;
-            font-weight: bold;
-            margin-left: 2px;
-        }
-    }
-
-    .description {
-        font-size: 16px;
-        margin-left: 155px;
-        font-family: 'Lucida Sans Unicode';
-        letter-spacing: -0.3px;
-
-        .descriptor {
-            height: 100%;
-            width: auto;
-            font-weight: bold;
-            display: table-cell;
-            text-align: right;
-            padding-right: 10px;
-        }
-        
-        .infotext {
-            height: 100%;
-            display: table-cell;
-            white-space: nowrap;
-            text-align: left;
-        }
-    }
-
-    .container12 {
+    .title {
+        font-size: 40px;
         display: flex;
-        flex-direction: row;
+        font-weight: bold;
+        margin-left: 0px;
+        margin-bottom: 0px;
+      }
+    
+    .subtitle {
+        font-size: 30px;
+        display: flex;
+        font-weight: bold;
+        margin-left: 2px;
+      }
+}
 
-        .tabpanel12 {
-            width: 50%;
-            margin-left: 150px;
-            margin-top: 25px;
-            margin-bottom: 20px;
+.description {
+    font-size: 16px;
+    margin-left: 155px;
+    font-family: 'Lucida Sans Unicode';
+    letter-spacing: -0.3px;
 
-            .tabs {
-                background: #393e46;
-                /*border-top-left-radius: 8px;
-                border-top-right-radius: 8px;
-                width: 57%;*/
-            }
+    .descriptor {
+        height: 100%;
+        width: auto;
+        font-weight: bold;
+        display: table-cell;
+        text-align: right;
+        padding-right: 10px;
+      }
+    
+    .infotext {
+        height: 100%;
+        display: table-cell;
+        white-space: nowrap;
+        text-align: left;
+      }
+}
 
-            .tab-name {
-                color: white;
-            }
+.tabpanel1 {
+    width: 50%;
+    margin-left: 150px;
+    margin-top: 25px;
+    margin-bottom: 20px;
 
-            .panel-content {
-                overflow-y: auto;
-                max-height: 370px;
-                border: 1px solid  #393e46;
-                border-top: 0px solid;
-                background: white;
-            }
-        }
+    .tabs {
+        background: #393e46;
+        /*border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+        width: 57%;*/
+    }
 
-        .albumImage {
-            margin-left: 70px;
-            margin-top: 25px;
-            width: auto;
-            height: auto;
+    .tab-name {
+        color: white;
+    }
 
-            .img2 {
-                border: 1px solid #393e46;
-                max-width: 400px;
-                max-height: 400px;
-            }
-        }
+    .panel-content {
+        overflow-y: auto;
+        max-height: 370px;
+        border: 1px solid  #393e46;
+        border-top: 0px solid;
+        background: white;
+    }
+}
+
+.albumImage {
+    border: 1px solid #393e46;
+    position: absolute;
+    left: 791px;
+    top: 160px;
+    width: 202px;
+    height: 202px;
+
+    .img {
+        width: 200px;
+        height: 200px;
     }
 }
