--- a/musasampo-frontend/src/components/guitar-item/guitar-item.styles.scss
+++ b/musasampo-frontend/src/components/guitar-item/guitar-item.styles.scss
@@ -9,8 +9,7 @@
     .image {
         width: 100%;
         height: 95%;
-        background-size: contain;
-        background-repeat: no-repeat;
+        background-size: cover;
         background-position: center;
         margin-bottom: 5px;
     }
