--- a/musasampo-frontend/src/components/band-item/band-item.styles.scss
+++ b/musasampo-frontend/src/components/band-item/band-item.styles.scss
@@ -22,6 +22,14 @@
         display: none;
     }
 
+    .custom-button2 {
+        width: 80%;
+        opacity: 0.7;
+        position: absolute;
+        top: 220px;
+        display: none;
+    }
+
     &:hover {
         .image {
             opacity: 0.8;
