--- a/musasampo-frontend/src/components/album/album.styles.scss
+++ b/musasampo-frontend/src/components/album/album.styles.scss
@@ -73,8 +73,8 @@
     position: absolute;
     left: 791px;
     top: 160px;
-    width: 202px;
-    height: 202px;
+    width: 100%;
+    height: 100%;
 
     .img {
         width: 200px;
