--- a/musasampo-frontend/src/components/songs/songs.styles.scss
+++ b/musasampo-frontend/src/components/songs/songs.styles.scss
@@ -5,6 +5,7 @@
         margin-bottom: 15px;
         font-size: 40px;
         font-weight: bold;
+        position: relative;
     }
 
     .description {
