lots of UI tweaks and fixes

--- a/musasampo-frontend/src/components/profile-edit/profile-edit.styles.scss
+++ b/musasampo-frontend/src/components/profile-edit/profile-edit.styles.scss
@@ -7,15 +7,16 @@
         flex-direction: column;
         margin: auto;
     
-        .title {
+        .title92 {
         font-size: 34px;
         margin-top: 40px;
+        margin-bottom: 35px;
         }
     
-        .buttons {
+        .buttons17 {
         display: flex;
         justify-content: space-between;
-        padding-top: 45px;
+        padding-top: 25px;
         }
 
         .form-input-label {
