--- a/musasampo-frontend/src/components/guitar-item/guitar-item.styles.scss
+++ b/musasampo-frontend/src/components/guitar-item/guitar-item.styles.scss
@@ -1,14 +1,14 @@
 .guitar-item {
-    width: 22vw;
+    width: auto;
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 400px;
     align-items: center;
     position: relative;
 
     .image {
         width: 100%;
-        height: 95%;
+        height: 100%;
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
@@ -16,7 +16,7 @@
     }
 
     .custom-button {
-        width: 80%;
+        width: 70%;
         opacity: 0.7;
         position: absolute;
         top: 220px;
@@ -25,7 +25,7 @@
 
     &:hover {
         .image {
-            opacity: 0.8;
+            opacity: 0.65;
         }
 
         .custom-button {
@@ -39,7 +39,7 @@
         display: flex;
         justify-content: space-between;
         font-size: 18px;
-        margin-top: 10px;
+        margin-top: 20px;
 
         .guitarInformation {
             width: 100%;
