--- a/musasampo-frontend/src/components/profile-account-details/account-details.styles.scss
+++ b/musasampo-frontend/src/components/profile-account-details/account-details.styles.scss
@@ -1,17 +1,14 @@
 .profile-item1 {
     margin-left: 40px;
     margin-top: 20px;
-  
+
     .profile-box {
         height: 260px;
-        width: 50%;
-        background: #c5c5c5;
-        border-bottom: 2px solid #808080;
-        border-right: 1px solid #919191;
-        border-left: 2px solid #919191;
-        border-top: 1px solid #9c9c9c;
-        border-top-right-radius: 22px;
-        border-bottom-right-radius: 22px;
+        display: flex;
+        flex-direction: row;
+        width: 53%;
+        background: #e2e2e2;
+        border: 3px solid #393e46;
     
         .profileImage {
         display: block;
@@ -19,49 +16,34 @@
         margin-left: 30px;
         margin-top: 30px;
 
-            .img {
+            .img7 {
                 width: 200px;
                 height: 200px;
             }
         }
-    
-        .titleText {
-        display: inline-block;
-        font-size: 35px;
-        font-weight: bold;
-        margin-top: 25px;
-        margin-left: 30px;
-        }
-    
-        .user-info {
-        font-size: 16px;
-        font-family: 'Lucida Sans Unicode';
-        letter-spacing: -0.3px;
-        padding-top: 10px;
-        display: block;
-    
-            .descriptor {
-                height: 100%;
-                width: auto;
-                display: table-cell;
-                text-align: left;
-                font-weight: bold;
-                padding-right: 10px;
-                padding-left: 30px;
-            }
-        
-            .infotext {
-                height: 100%;
-                display: table-cell;
-                white-space: nowrap;
-                text-align: left;
-                margin: auto;
+
+        .flex-box-3 {
+            display: flex;
+            flex-direction: column;
+            margin-left: 10px;
+
+            .titleText {
+            display: inline-block;
+            font-size: 35px;
+            font-weight: bold;
+            margin-top: 25px;
+            margin-left: 30px;
             }
         }
+
+        .space-div {
+            margin-top: 10px;
+        }
         
-        .button {
-            float: right;
-            margin-right: 30px;
+        .buttons-profile {
+            display: flex;
+            flex-direction: column;
+            margin: auto 15px 15px auto;
         }
     }
-  }
+}
