--- a/musasampo-frontend/src/pages/guitartuner-page/guitartuner-page.styles.scss
+++ b/musasampo-frontend/src/pages/guitartuner-page/guitartuner-page.styles.scss
@@ -9,7 +9,7 @@
 
     .title {
         font-size: 38px;
-        margin: 0 auto 30px;
+        margin: 30px auto 0px;
 
         cursor: pointer;
         &:hover {
@@ -19,8 +19,10 @@
 
     .items {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-gap: 10px;
+        margin-top: 100px;
+        margin-left: 10%;
+        grid-template-columns: repeat(4, 22.5%);
+        grid-gap: 0px;
 
         & .album-item {
             margin-bottom: 30px;
